@@ -27,6 +27,8 @@ Post-v2.15.0
      * Add a partial HWOL PMD statistic counting hits similar to existing
        EMC/SMC/DPCLS stats.
      * Enable AVX512 optimized DPCLS to search subtables with larger miniflows.
+     * Add more specialized DPCLS subtables to cover common rules, enhancing
+       the lookup performance.
    - ovs-ctl:
      * New option '--no-record-hostname' to disable hostname configuration
        in ovsdb on startup.
